--- a/theme/foyers/templates/blocks/inscriptionFoyer.html
+++ b/theme/foyers/templates/blocks/inscriptionFoyer.html
@@ -12,7 +12,7 @@
                         </h2>
                         <div id="inscriptionStage1" class="collapse in"> 
                             <ng-form name="infos_personnelles">
-                                    <!--<div  class="row" ng-include="formCtrl.general_infos"></div>-->
+                                    <div  class="row" ng-include="formCtrl.general_infos"></div>
                                     <div class="row text-center">
                                         <div class="button submit cursor-as-pointer" ng-class="{'disabled' : infos_personnelles.$invalid}" ng-click="formCtrl.setCurrentStage(1,infos_personnelles.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
                                         <p ng-if="infos_personnelles.$invalid && infos_personnelles.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
@@ -25,7 +25,7 @@
                         </h2>
                         <div id="inscriptionStage2" class="collapse">
                             <ng-form name="infos_familiales">
-                                    <!--<div  class="row" ng-include="formCtrl.family_infos"></div>-->
+                                    <div  class="row" ng-include="formCtrl.family_infos"></div>
                                     <div  class="row" ng-include="formCtrl.freres_soeurs_infos"></div>
                                     <div class="row text-center">
                                         <div class="button submit cursor-as-pointer" ng-class="{'disabled' : infos_familiales.$invalid}" ng-click="formCtrl.setCurrentStage(2,infos_familiales.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
