--- a/theme/foyers/templates/blocks/formulaire/infos_individuel.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_individuel.html
@@ -8,7 +8,7 @@
         <div class="col-sm-8"><input  class="form-control" type="text" id="prenom" ng-model="inscription.surname" name="surname" required></div>
     </div>
     <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="sexe" class="label_style">{{rubedo.translate("Block.Inscription.Sexe")}}*</label></div>
+        <div class="col-xs-12 col-sm-4"><label for="sexe" class="label_style">{{rubedo.translate("Block.Inscription.Sexe")}}*</label></div>
         <div class="col-sm-8">
             <input type="radio"  name="sexe" id="H" value="H" ng-model="inscription.sexe.sexe" required>
                         <label for="H" class="sexe_label">{{rubedo.translate("Block.Inscription.Sexe.H")}}</label>	
