--- a/theme/foyers/templates/blocks/inscriptionFoyer.html
+++ b/theme/foyers/templates/blocks/inscriptionFoyer.html
@@ -57,7 +57,7 @@
                         
                         <div id="inscriptionStage4" class="collapse">
                             <!--<ng-form name="infos_complementaires">-->
-                                    <div  class="row" ng-include="formCtrl.complement_infos"></div>
+                                    <!--<div  class="row" ng-include="formCtrl.complement_infos"></div>-->
                                     <div class="row text-center">
                                         <div class="button submit cursor-as-pointer" ng-class="{'disabled' : infos_complementaires.$invalid}" ng-click="formCtrl.setCurrentStage(4,infos_complementaires.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
                                         <p ng-if="infos_complementaires.$invalid && infos_complementaires.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
@@ -72,7 +72,7 @@
                         
                         <div id="inscriptionStage5" class="collapse"> 
                             <ng-form name="photo">
-                                    <!--<div  class="row" ng-include="formCtrl.photo"></div>-->
+                                    <div  class="row" ng-include="formCtrl.photo"></div>
                                     <div class="row text-center">
                                         <div class="button submit cursor-as-pointer" ng-class="{'disabled' : infos_complementaires.$invalid}" ng-click="formCtrl.setCurrentStage(5,photo.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
                                         <p ng-if="photo.$invalid && photo.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
