--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -45,7 +45,10 @@
 			</div>
 			
 			<div class="col-sm-8 col-sm-push-2 col-xs-10 col-xs-push-1 presentationArticle" >
-				<rubedo-field field = "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field><!--Titre-->
+				<div field = "{{contentDetailCtrl.getFieldByName('text')}}" ng-if="!fieldEditMode">
+					<h1 class="presentationArticle">{{fieldEntity['text']}}</h1>
+				</div>
+				<rubedo-field ng-if="fieldEditMode" field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field>
 				<div class="redacteur">
 					<rubedo-field field = "{{contentDetailCtrl.getFieldByName('redacteur')}}" ng-if="fieldEntity['redacteur']"></rubedo-field><!--Rédacteur-->
 				</div>
