--- a/theme/wtp17/templates/blocks/contentDetail/actualites.html
+++ b/theme/wtp17/templates/blocks/contentDetail/actualites.html
@@ -8,7 +8,7 @@
 	
 	<div class="container article">
 		<div class="row">
-			<div class=" col-xs-12">
+			<!--<div class=" col-xs-12">
 				<div data-addthis-toolbox  data-title="{{rubedo.current.page.title}}" data-summary="{{contentDetailCtrl.content.fields.summary}}"  class="addthis_toolbox socials-share" >
 					<div class="col-xs-6 col-sm-4">
 						<a class="addthis_button_facebook" href=""><img class="hidden"><span class="font-jmj fb"></span>{{rubedo.translate("Block.Share.Facebook", "Share on Facebook")}}</a>
@@ -20,7 +20,7 @@
 						<a class="addthis_button_email"><img class="hidden"><span class="font-jmj mail"></span>{{rubedo.translate("Block.Share.Mail", "Share by email")}}</a>
 					</div>
 				</div>
-			</div>
+			</div>-->
 			<div class="col-xs-12">
 				<rubedo-field field = "{{contentDetailCtrl.getFieldByName('richText')}}" ></rubedo-field><!--Texte-->
 			</div>
