--- a/theme/wtp18/templates/blocks/contentDetail/actualites.html
+++ b/theme/wtp18/templates/blocks/contentDetail/actualites.html
@@ -1,14 +1,27 @@
 <div>
+	
 	<header class="parallax page" afkl-lazy-image-options='{"background": true}'
                 afkl-lazy-image="{{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'],{height:'400px',mode:'boxed'})}} 768w, {{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image'] ,{height:'600px',mode:'boxed'})}} 972w, {{rubedo.imageUrl.getUrlByMediaId(fieldEntity['image']  ,{width:'1920px',mode:'boxed'})}} 1650w">
         <div class="container">
             <rubedo-field field= "{{contentDetailCtrl.getFieldByName('text')}}" ng-if="fieldEntity['text']"></rubedo-field>
         </div>
     </header>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 ">
+				<div ng-controller="BreadcrumbController as breadcrumbCtrl">
+					<ol class="breadcrumb hidden-xs">
+					    <li ng-class="{'active': !page.url}" ng-repeat="page in rubedo.current.breadcrumb | limitTo:-2 track by $index"><a ng-if="page.url" ng-href="{{page.url}}">{{page.title}}</a><span ng-if="!page.url">{{page.title}}</span></li>
+					</ol>
+					<a class="header_link visible-xs" ng-repeat="page in rubedo.current.breadcrumb | limitTo:-2 track by $index" ng-href="{{page.url}}" ng-if="$first">{{page.title}}</a>
+				</div>
+			</div>
+		</div>
+	</div>
 	
 	<div class="container article">
 		<div class="row">
-			<div class=" col-xs-12">
+			<!--<div class=" col-xs-12">
 				<div data-addthis-toolbox  data-title="{{rubedo.current.page.title}}" data-summary="{{contentDetailCtrl.content.fields.summary}}"  class="addthis_toolbox socials-share" >
 					<div class="col-xs-6 col-sm-4">
 						<a class="addthis_button_facebook" href=""><img class="hidden"><span class="font-jmj fb"></span>{{rubedo.translate("Block.Share.Facebook", "Share on Facebook")}}</a>
@@ -20,10 +33,15 @@
 						<a class="addthis_button_email"><img class="hidden"><span class="font-jmj mail"></span>{{rubedo.translate("Block.Share.Mail", "Share by email")}}</a>
 					</div>
 				</div>
-			</div>
-			<div class="col-xs-12">
+			</div>-->
+			<div class="col-xs-12 col-sm-8 col-md-9">
 				<rubedo-field field = "{{contentDetailCtrl.getFieldByName('richText')}}" ></rubedo-field><!--Texte-->
 			</div>
+			<div class="hidden-xs col-sm-4 col-md-3">
+                <div class="row" ng-init = "blockConfig={'theme':'normal','mode':'tweets','widgetId':'651025227502198784','account':'Festival_WTP','width':'300','options':['noHeader']}">
+                    <div ng-include="rubedo.blockTemplateResolver.getTemplate('twitter',blockConfig)"></div>
+                </div>
+            </div>
 		</div>
 	</div>
 </div>
