--- a/theme/wtp18/templates/blocks/contentDetail/actualites.html
+++ b/theme/wtp18/templates/blocks/contentDetail/actualites.html
@@ -34,10 +34,10 @@
 					</div>
 				</div>
 			</div>-->
-			<div class="col-xs-12 col-sm-8 col-md-9">
+			<div class="col-xs-12 col-sm-8 col-md-8">
 				<rubedo-field field = "{{contentDetailCtrl.getFieldByName('richText')}}" ></rubedo-field><!--Texte-->
 			</div>
-			<div class="hidden-xs col-sm-4 col-md-3">
+			<div class="hidden-xs col-sm-4 col-md-push-1 col-md-3">
                 <div class="row" ng-controller="FacebookController as fcbCtrl" style="margin-bottom:48px" ng-if="rubedo.current.page.locale !='pl' ">
                     <div class="fb-page" data-href="https://www.facebook.com/festivalwelcometoparadise"
                          data-width="300" data-hide-cover="false" data-show-facepile="true" data-show-posts="true" data-height="750">
