--- a/theme/wtp18/templates/blocks/contentList.html
+++ b/theme/wtp18/templates/blocks/contentList.html
@@ -9,7 +9,7 @@
         <span class="glyphicon glyphicon-plus"></span>
     </button>
     <!--DEFAULT-->         
-    <div ng-if="contentListCtrl.usedContentTypes[0]=='5517c04245205ec708869bc6' " class="container" style="margin-top:75px;">
+    <div ng-if="contentListCtrl.usedContentTypes[0]=='5517c04245205ec708869bc6' " class="container" style="margin-top:75px;background-color: white;">
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-md-9" style="padding-right:24px">
                 <div ng-attr-lr-infinite-scroll="loadMoreContents"
