--- a/theme/wtp18/templates/blocks/contentDetail/actualites.html
+++ b/theme/wtp18/templates/blocks/contentDetail/actualites.html
@@ -6,46 +6,50 @@
             <rubedo-field field= "{{contentDetailCtrl.getFieldByName('text')}}" ng-if="fieldEntity['text']"></rubedo-field>
         </div>
     </header>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-xs-12 ">
-				<div ng-controller="BreadcrumbController as breadcrumbCtrl">
-					<ol class="breadcrumb hidden-xs">
-					    <li ng-class="{'active': !page.url}" ng-repeat="page in rubedo.current.breadcrumb | limitTo:-2 track by $index"><a ng-if="page.url" ng-href="{{page.url}}">{{page.title}}</a><span ng-if="!page.url">{{page.title}}</span></li>
-					</ol>
-					<a class="breadcrumb visible-xs" ng-repeat="page in rubedo.current.breadcrumb | limitTo:-2 track by $index" ng-href="{{page.url}}" ng-if="$first">{{page.title}}</a>
-				</div>
-			</div>
-		</div>
-	</div>  
-	
-	<div class="container article">
-		<div class="row">  
-			<!--<div class=" col-xs-12">
-				<div data-addthis-toolbox  data-title="{{rubedo.current.page.title}}" data-summary="{{contentDetailCtrl.content.fields.summary}}"  class="addthis_toolbox socials-share" >
-					<div class="col-xs-6 col-sm-4">
-						<a class="addthis_button_facebook" href=""><img class="hidden"><span class="font-jmj fb"></span>{{rubedo.translate("Block.Share.Facebook", "Share on Facebook")}}</a>
-					</div>
-					<div class="col-xs-6 col-sm-4">
-						<a class="addthis_button_twitter"><img  class="hidden"><span class="font-jmj twitter"></span>{{rubedo.translate("Block.Share.Twitter", "Share on Twitter")}}</a>
-					</div>
-					<div class="col-xs-6 col-sm-4">
-						<a class="addthis_button_email"><img class="hidden"><span class="font-jmj mail"></span>{{rubedo.translate("Block.Share.Mail", "Share by email")}}</a>
+	<div style="background-color: white;">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-xs-12 ">
+					<div ng-controller="BreadcrumbController as breadcrumbCtrl">
+						<ol class="breadcrumb hidden-xs">
+							<li ng-class="{'active': !page.url}" ng-repeat="page in rubedo.current.breadcrumb | limitTo:-2 track by $index"><a ng-if="page.url" ng-href="{{page.url}}">{{page.title}}</a><span ng-if="!page.url">{{page.title}}</span></li>
+						</ol>
+						<div class="breadcrumb">
+							<a class="visible-xs" ng-repeat="page in rubedo.current.breadcrumb | limitTo:-2 track by $index" ng-href="{{page.url}}" ng-if="$first">{{page.title}}</a>
+						</div>
 					</div>
 				</div>
-			</div>-->
-			<div class="col-xs-12 col-sm-8 col-md-8">
-				<rubedo-field field = "{{contentDetailCtrl.getFieldByName('richText')}}" ></rubedo-field><!--Texte-->
 			</div>
-			<div class="hidden-xs col-sm-4 col-md-push-1 col-md-3">
-                <div class="row" ng-controller="FacebookController as fcbCtrl" style="margin-bottom:48px" ">
-                    <div class="fb-page" data-href="https://www.facebook.com/festivalwelcometoparadise"
-                         data-width="300" data-hide-cover="false" data-show-facepile="true" data-show-posts="true" data-height="750">
-                            <div class="fb-xfbml-parse-ignore">
-                            </div>
-                    </div>
-                </div>
-            </div>
+		</div>  
+		
+		<div class="container article">
+			<div class="row">  
+				<!--<div class=" col-xs-12">
+					<div data-addthis-toolbox  data-title="{{rubedo.current.page.title}}" data-summary="{{contentDetailCtrl.content.fields.summary}}"  class="addthis_toolbox socials-share" >
+						<div class="col-xs-6 col-sm-4">
+							<a class="addthis_button_facebook" href=""><img class="hidden"><span class="font-jmj fb"></span>{{rubedo.translate("Block.Share.Facebook", "Share on Facebook")}}</a>
+						</div>
+						<div class="col-xs-6 col-sm-4">
+							<a class="addthis_button_twitter"><img  class="hidden"><span class="font-jmj twitter"></span>{{rubedo.translate("Block.Share.Twitter", "Share on Twitter")}}</a>
+						</div>
+						<div class="col-xs-6 col-sm-4">
+							<a class="addthis_button_email"><img class="hidden"><span class="font-jmj mail"></span>{{rubedo.translate("Block.Share.Mail", "Share by email")}}</a>
+						</div>
+					</div>
+				</div>-->
+				<div class="col-xs-12 col-sm-8 col-md-8">
+					<rubedo-field field = "{{contentDetailCtrl.getFieldByName('richText')}}" ></rubedo-field><!--Texte-->
+				</div>
+				<div class="hidden-xs col-sm-4 col-md-push-1 col-md-3">
+					<div class="row" ng-controller="FacebookController as fcbCtrl" style="margin-bottom:48px" ">
+						<div class="fb-page" data-href="https://www.facebook.com/festivalwelcometoparadise"
+							 data-width="300" data-hide-cover="false" data-show-facepile="true" data-show-posts="true" data-height="750">
+								<div class="fb-xfbml-parse-ignore">
+								</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
