--- a/theme/wtp18/templates/blocks/contentList.html
+++ b/theme/wtp18/templates/blocks/contentList.html
@@ -10,7 +10,7 @@
     </button>
     <!--DEFAULT-->
     <div style="background-color: white;">
-        <div ng-if="contentListCtrl.usedContentTypes[0]=='5517c04245205ec708869bc6' " class="container" style="margin-top:75px;">
+        <div ng-if="contentListCtrl.usedContentTypes[0]=='5517c04245205ec708869bc6' " class="container" style="padding-top:75px;">
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-md-9" style="padding-right:24px">
                     <div ng-attr-lr-infinite-scroll="loadMoreContents"
