Accueil page foyer

--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -237,22 +237,38 @@ width: 90%;
 	&:hover{background:#e5e4e0;color:#419ec7;}
 }
 #press {
-	a.foyer1 	{ top:25%; left:25%; z-index:1000;   }
-	a.foyer2 	{ top:35%; left:15%; z-index:1001;  }
-	a.foyer3	{  top:45%; left:20%; z-index:5001;   }
-	a.foyer4 	{   top:55%; left:30%; z-index:5002;   }
-	a.foyer5 	{   top:60%; left:10%; z-index:5005; }
-	a.foyer6 	{   top:70%; left:25%; z-index:1006;  }
-	a.foyer7 	{   top:75%; left:15%; z-index:5004;  }
-	a.foyer8 	{   top:80%; left:30%; z-index:1002;   }
-	a.foyer9 	{   top:65%; left:30%; z-index:1003;  }
-	a.foyer10 	{   top:75%; left:40%; z-index:1004;   }
-	a.foyer11 	{   top:30%; left:40%; z-index:1005;  }
-	a.foyer12 	{   top:40%; left:42%; z-index:5003;   }
-	a.foyer13 	{   top:45%; left:35%; z-index:5007; }
-	a.foyer14 	{   top:50%; left:40%; z-index:1002;  }
-	a.foyer15 	{   top:60%; left:45%; z-index:5004;  }
-	a.foyer16 	{   top:65%; left:35%; z-index:5000;  }
+	//a.foyer1 	{ top:25%; left:25%; z-index:1000;   }
+	//a.foyer2 	{ top:35%; left:15%; z-index:1001;  }
+	//a.foyer3	{  top:45%; left:20%; z-index:5001;   }
+	//a.foyer4 	{   top:55%; left:30%; z-index:5002;   }
+	//a.foyer5 	{   top:60%; left:10%; z-index:5005; }
+	//a.foyer6 	{   top:70%; left:25%; z-index:1006;  }
+	//a.foyer7 	{   top:75%; left:15%; z-index:5004;  }
+	//a.foyer8 	{   top:80%; left:30%; z-index:1002;   }
+	//a.foyer9 	{   top:65%; left:30%; z-index:1003;  }
+	//a.foyer10 	{   top:75%; left:40%; z-index:1004;   }
+	//a.foyer11 	{   top:30%; left:40%; z-index:1005;  }
+	//a.foyer12 	{   top:40%; left:42%; z-index:5003;   }
+	//a.foyer13 	{   top:45%; left:35%; z-index:5007; }
+	//a.foyer14 	{   top:50%; left:40%; z-index:1002;  }
+	//a.foyer15 	{   top:60%; left:45%; z-index:5004;  }
+	//a.foyer16 	{   top:65%; left:35%; z-index:5000;  }
+	a.foyer1 	{ top:2%; left:-5%; }
+	a.foyer2 	{ top:2%; left:15%;   }
+	a.foyer3	{  top:2%; left:35%; }
+	a.foyer4 	{   top:2%; left:55%;  }
+	a.foyer5 	{   top:30%; left:70%;}
+	a.foyer6 	{   top:50%; left:70%;  }
+	a.foyer7 	{   top:70%; left:70%;  }
+	a.foyer8 	{   top:90%; left:70%;  }
+	a.foyer9 	{   top:110%; left:55%;  }
+	a.foyer10 	{   top:110%; left:35%;   }
+	a.foyer11 	{   top:110%; left:15%;  }
+	a.foyer12 	{   top:110%; left:-5%;   }
+	a.foyer13 	{   top:90%; left:-15%; }
+	a.foyer14 	{   top:70%; left:-15%;   }
+	a.foyer15 	{   top:50%; left:-15%; }
+	a.foyer16 	{   top:30%; left:-15%;  }
 }
 #press:hover {
 	a.foyer1 	{ top:2%; left:-5%; }
