--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -219,7 +219,7 @@ width: 90%;
 
 /*CHOISIS TA VILLE*/
 #press{ position:absolute; height:400px; padding: 60px 0 0 0; top:10%;margin-left:20%;width:80%;}
-#press img#choisis{margin-top: 2%;  margin-left: 5%;z-index:1;position:relative;}
+#press img#choisis{margin-top: 2%;  margin-left: 5%;z-index:1;}
 #press a	{ 
 	display: block; 
 	width:15%; 
