Ajout photo redacteur FOI

--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -370,6 +370,10 @@ a:hover .redacteur{
 		text-transform: uppercase !important;
 		margin-bottom: 80px !important;
 }
+/*PHOTO DU REDACTEUR*/
+.detail-img img{
+    max-height:80px;
+  }
 
 
 
