--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -46,8 +46,16 @@
 			
 			<div class="col-sm-8 col-sm-push-2 col-xs-10 col-xs-push-1 presentationArticle" >
 				<rubedo-field field =  "{{contentDetailCtrl.getFieldByName('text')}}"></rubedo-field>
-				<div class="redacteur">
-					<rubedo-field field = "{{contentDetailCtrl.getFieldByName('redacteur')}}" ng-if="fieldEntity['redacteur']"></rubedo-field><!--Rédacteur-->
+				<div class="redacteur" ng-if="fieldEntity['redacteur'] && !fieldEntity['photoRedacteur']">
+					<rubedo-field field = "{{contentDetailCtrl.getFieldByName('redacteur')}}"></rubedo-field><!--Rédacteur-->
+				</div>
+				<div class="redacteur" ng-if="fieldEntity['redacteur'] && fieldEntity['photoRedacteur']">
+					<div class="col-sm-2">
+						<rubedo-field class="detail-img" field = "{{contentDetailCtrl.getFieldByName('photoRedacteur')}}"></rubedo-field><!--image-->
+					</div>
+					<div class="col-sm-push-1 col-sm-9">
+						<rubedo-field field = "{{contentDetailCtrl.getFieldByName('redacteur')}}"></rubedo-field><!--Rédacteur-->
+					</div>
 				</div>
 				<rubedo-field field = "{{contentDetailCtrl.getFieldByName('richText')}}" ng-if="fieldEntity['richText']" class="contenu_article"></rubedo-field>
 						
