--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -355,8 +355,7 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 }
 
 .redacteur p{
-				text-transform: uppercase;
-    font-size: 14px;
+				p{text-transform: uppercase;font-size: 14px;}
     margin: 50px 0px 50px;
 }
 a .redacteur{
@@ -372,7 +371,7 @@ a:hover .redacteur{
 }
 /*PHOTO DU REDACTEUR*/
 .detail-img img{
-    max-height:80px;
+    max-height:auto;
   }
 
 
