--- a/theme/foi/templates/blocks/contentDetail/article_foi.html
+++ b/theme/foi/templates/blocks/contentDetail/article_foi.html
@@ -53,7 +53,7 @@
 					<div class="col-sm-2">
 						<rubedo-field class="detail-img" field = "{{contentDetailCtrl.getFieldByName('photoRedacteur')}}"></rubedo-field><!--image-->
 					</div>
-					<div class="col-sm-push-1 col-sm-9">
+					<div class="col-sm-9">
 						<rubedo-field field = "{{contentDetailCtrl.getFieldByName('redacteur')}}"></rubedo-field><!--Rédacteur-->
 					</div>
 				</div>
