--- a/theme/foi/css/foi.less
+++ b/theme/foi/css/foi.less
@@ -355,7 +355,7 @@ header.content>div{line-height: normal;display: inline-block;text-align:left; ve
 }
 
 .redacteur p{
-				p{text-transform: uppercase;font-size: 14px;}
+				text-transform: uppercase;font-size: 14px;
     margin: 50px 0px 50px;
 }
 a .redacteur{
@@ -371,7 +371,7 @@ a:hover .redacteur{
 }
 /*PHOTO DU REDACTEUR*/
 .detail-img img{
-    max-height:auto;
+    margin-top: 50px;
   }
 
 
